--- a/.github/actions/joke-action/action.yml
+++ b/.github/actions/joke-action/action.yml
@@ -4,5 +4,5 @@ outputs:
   joke-output:
     description: The resulting joke from the icanhazdadjokes API
 runs:
-  - using: "node16"
-  - main: "main.js"
+    using: "node16"
+    main: "main.js"
